# detector

./: .gitignore  config.toml  pyproject.toml
src/detector/: config.py  di.py  helpers.py  main.py
src/detector/telegram_bot/handlers/: photo.py  start.py
src/test_task/: main.py
