[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[project]
name = "detector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "adaptix>=3.0.0b11",
    "aiogram>=3.26.0",
    "dishka>=1.9.1",
    "gspread>=6.2.1",
    "opencv-python>=4.13.0.92",
    "pillow>=10.4.0",
    "pyzbar>=0.1.9",
    "requests>=2.32.5",
    "surya-ocr>=0.17.1",
    "toml-rs>=0.3.6",
    "transformers<5",
]

[project.scripts]
detector = "detector.main:main"

[tool.mypy]
ignore_missing_imports = true
